--- a/链表/单向链表.html
+++ b/链表/单向链表.html
@@ -30,7 +30,7 @@
           }
           return string
         }
-        inEmpty() {
+        isEmpty() {
           return this.length === 0
         }
         size() {
@@ -111,7 +111,6 @@
             throw new Error('输入位置有误')
           let current = this.head
           if (this.length === 1) {
-            current = this.head
             this.head = null
           } else {
             if (position == 0) {
