--- a/树/BST.html
+++ b/树/BST.html
@@ -56,6 +56,7 @@
             )
           }
         }
+        // 遍历都是利用的递归和函数调用栈
         // 二叉树的先序遍历对外暴露的方法
         preOrder(handler) {
           this.preOrderNode(this.root, handler)
